# triumph

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  triumph.sln
common/: FileIO.cpp  FileIO.h  Log.cpp  Log.h  Tryte.cpp  Tryte.h  constants.h  debug_utils.h  util.cpp
common/include/: FileIO.h  Tryte.h  constants.h  util.hpp
common/src/: FileIO.cpp  Tryte.cpp  util.cpp
docs/: spec.md  ternary_jump.md
res/: helloworld.tas  helloworld.td  helloworld.tri  test.tas
res/hello_world/: ascii_tilemap.tri  build.sh  hello_world.tas  hello_world.td  hello_world.tri  verbose_out.txt
tas/: .gitignore  README.md  tas.sln  tas.vcxproj  tas.vcxproj.filters
tas/Debug/tas.tlog/: tas.lastbuildstate
tas/include/: Block.h  CLOptions.h  Statement.h  TASCLOptions.h  Token.h  assemble.h  assemble_instr.h  constants.h  error.h  handle_instr.h  link.h  parse.h  tas.h  tokenize.h  util.hpp
tas/src/: Block.cpp  Statement.cpp  Token.cpp  assemble.cpp  assemble_instr.cpp  check_syntax.cpp  error.cpp  handle_instr.cpp  handle_jump.cpp  link.cpp  main.cpp  parse.cpp  tas.cpp  tokenize.cpp  util.cpp
tas/test/: output.tri  test.tas
test/: .gitignore
test/tas/: compare_files.py  run_tests.py
test/tas/add/: expected
test/tas/alias_tests/alias/: alias.tas  expected
test/tas/instr_tests/adc/: adc.tas  expected
test/tas/instr_tests/add/: add.tas  expected
test/tas/instr_tests/and/: and.tas  expected  out.tri
test/tas/instr_tests/bank/: bank.tas  expected
test/tas/instr_tests/break/: break.tas  expected
test/tas/instr_tests/cmp/: cmp.tas  expected
test/tas/instr_tests/cpz/: cpz.tas  expected
test/tas/instr_tests/dec/: dec.tas  expected
test/tas/instr_tests/flip/: expected  flip.tas
test/tas/instr_tests/gank/: expected  gank.tas
test/tas/instr_tests/halt/: halt.tas
test/tas/instr_tests/inc/: expected  inc.tas
test/tas/instr_tests/jps/: expected  jps.tas
test/tas/instr_tests/jump/: expected  jump.tas
test/tas/instr_tests/load/: expected  load.tas
test/tas/instr_tests/nop/: expected  nop.tas
test/tas/instr_tests/or/: expected  or.tas
test/tas/instr_tests/peek/: expected  peek.tas
test/tas/instr_tests/pjp/: expected  pjp.tas
test/tas/instr_tests/pop/: expected  pop.tas
test/tas/instr_tests/push/: expected  push.tas
test/tas/instr_tests/save/: expected  save.tas
test/tas/instr_tests/sbb/: expected  sbb.tas
test/tas/instr_tests/set/: expected  set.tas
test/tas/instr_tests/sh/: expected  sh.tas
test/tas/instr_tests/sleep/: sleep.tas
test/tas/instr_tests/star/: expected  star.tas
test/tas/instr_tests/sub/: expected  sub.tas
test/tas/instr_tests/swap/: expected  swap.tas
test/tas/instr_tests/zero/: expected  zero.tas
test/tas/integration_tests/string_literals/: expected  out.tri  string_literals.tas
test/tas/macro_tests/call/: call.tas  expected
test/tas/macro_tests/jump_macros/: expected  jump_macros.tas
test/tas/macro_tests/not/: expected  not.tas
test/tas/macro_tests/ret/: expected  ret.tas
test/tas/macro_tests/wait/: expected  wait.tas
test/tas/set/: set.tas
test/triumph/console_test/: console_test.tas  console_test.td  console_test.tri  input.tas  input.td  input.tri
test/triumph/debugger_test/: debugger_test.tas  debugger_test.tri
test/triumph/fibonacci_test/: main.tas  out.tri
test/triumph/instr_test/: main.tas  print.tas
test/triumph/print_test/: main.tas  print.tas
tools/: disk_reader.py  disk_writer.py  out.td  tryte_tools.py
tools/bmp_to_trytes/: Bitmap.cpp  Bitmap.h  Makefile  Pixel.h  bitmap_to_trytes.cpp  bmp_to_trytes.cpp
tools/bmp_to_trytes/include/: Bitmap.h  Pixel.h
tools/bmp_to_trytes/src/: Bitmap.cpp  Tryte.cpp  main.cpp
tools/disk_writer/: disk_writer.py  outdisk.td
tools/emacs_tas_mode/: tas-mode.el
tools/tilemap_viewer/: tilemap_viewer.py
triumph/: .gitignore  Disk.h  Tryte.natvis  triumph.sln  triumph.vcxproj  triumph.vcxproj.filters
triumph/CPU/: CPU.cpp  CPU.h  CPUInstructions.cpp  CPUdebugger.cpp  CPUjump.cpp
triumph/Computer/: BIOS.cpp  BIOS.h  Computer.cpp  Computer.h  TriumphCLOptions.h  main.cpp
triumph/GPU/: GPU.cpp  GPU.h
triumph/IO/: Console.cpp  Console.h  Disk.cpp  Disk.h  Screen.cpp  Screen.h
triumph/Memory/: Bank.cpp  Bank.h  BankManager.cpp  BankManager.h  Memory.cpp  Memory.h  MemoryBlock.cpp  MemoryBlock.h
triumph/include/: Bank.h  BankManager.h  BootDisk.h  CPU.h  Computer.h  Console.h  ConsoleOut.h  Device.h  Disk.h  GPU.h  Keyboard.h  Memory.h  Port.h  PortManager.h  Screen.h  TriumphCLOptions.h  Tryte.h  test.h
triumph/res/: ascii_tilemap.tri  helloworld.tas  helloworld.td  helloworld.tri  testdisk.td  tilemap.tri
triumph/src/: Bank.cpp  BankManager.cpp  CPU.cpp  CPUInstructions.cpp  CPUdebugger.cpp  CPUjump.cpp  Computer.cpp  Console.cpp  ConsoleOut.cpp  Device.cpp  Disk.cpp  Keyboard.cpp  Memory.cpp  Port.cpp  PortManager.cpp  Screen.cpp  Tryte.cpp  main.cpp
